tests/neg/deptypes-badsyntax.scala

type Bad1[T] = () =>> Array[T] // error
